@@ -92,15 +92,7 @@ if(WITH_DLT)
 	pkg_check_modules(DLT "automotive-dlt >= 2.11" REQUIRED)
 endif()
 
-option(WITH_CJSON "Build with cJSON support (required for dynamic security plugin and useful for mosquitto_sub)?" ON)
-if(WITH_CJSON)
-	FIND_PACKAGE(cJSON)
-	if(CJSON_FOUND)
-		target_compile_definitions(cJSON INTERFACE WITH_CJSON)
-	else()
-		message(STATUS "Optional dependency cJSON not found. Some features will be disabled.")
-	endif()
-endif()
+find_package(cJSON REQUIRED)
 
 option(WITH_LTO "Build with link time optimizations (IPO) / interprocedural optimization (IPO) enabled." ON)
 if(WITH_LTO)
