@@ -6,6 +6,8 @@ include ${R}/config.mk
 CLIENT_CFLAGS:=$(CLIENT_CFLAGS) $(CFLAGS)
 CLIENT_CPPFLAGS:=$(CLIENT_CPPFLAGS) $(CPPFLAGS)
 CLIENT_LDFLAGS:=$(CLIENT_LDFLAGS) $(LDFLAGS)
+CLIENT_LDADD:=${CLIENT_LDADD} -lcjson
+CLIENT_STATIC_LDADD:=${CLIENT_STATIC_LDADD} -lcjson
 
 ifeq ($(WITH_SHARED_LIBRARIES),yes)
 SHARED_DEP:=${R}/lib/libmosquitto.so.${SOVERSION}
