@@ -6,6 +6,7 @@ include ${R}/config.mk
 BROKER_CFLAGS:=$(BROKER_CFLAGS) $(CFLAGS)
 BROKER_CPPFLAGS:=$(BROKER_CPPFLAGS) $(CPPFLAGS)
 BROKER_LDFLAGS:=$(BROKER_LDFLAGS) $(LDFLAGS)
+BROKER_LDADD:=$(BROKER_LDADD) -lcjson
 
 ifeq ($(WITH_FUZZING),yes)
 all : mosquitto_broker.a
