@@ -184,6 +184,7 @@ Build:
   preinstalled SQLite3 find module.
 - Add an CMake option `WITH_LTO` to enable/disable link time optimization.
 - Set C99 as the explicit, rather than implicit, build standard.
+- cJSON is now a required dependency.
 
 
 2.0.15 - 2022-08-16
